--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,30 +13,31 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-03 Fri 15:20]
+#+CAPTION: Clock summary at [2019-05-03 Fri 16:59]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *78:33* |       |       | 100.0 |
+| *Total time*                                           | *80:10* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 78:33   |       |       | 100.0 |
-| Active                                                 |         | 78:33 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   3.4 |
-| Sprint and product backlog grooming                    |         |       |  3:27 |   4.4 |
+| Stories                                                | 80:10   |       |       | 100.0 |
+| Active                                                 |         | 80:10 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   3.3 |
+| Sprint and product backlog grooming                    |         |       |  3:27 |   4.3 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   2.4 |
-| Read variability papers                                |         |       |  1:04 |   1.4 |
+| Read variability papers                                |         |       |  1:04 |   1.3 |
 | Emacs maintenance and exploration work                 |         |       |  0:20 |   0.4 |
 | Fix issues with nightly build and CI                   |         |       |  0:39 |   0.8 |
-| Finish implementing the variability model              |         |       | 10:49 |  13.8 |
+| Finish implementing the variability model              |         |       | 10:49 |  13.5 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   1.9 |
-| Read meta-data using configurations                    |         |       | 24:24 |  31.1 |
-| Remove uses of annotations                             |         |       |  7:44 |   9.8 |
+| Read meta-data using configurations                    |         |       | 24:24 |  30.4 |
+| Remove uses of annotations                             |         |       |  7:44 |   9.6 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
-| Exclude profiles from stereotypes processing           |         |       |  2:41 |   3.4 |
-| Profiles as meta-model elements                        |         |       | 13:54 |  17.7 |
-| Add support for composable stereotypes                 |         |       |  6:06 |   7.8 |
+| Exclude profiles from stereotypes processing           |         |       |  2:41 |   3.3 |
+| Profiles as meta-model elements                        |         |       | 13:54 |  17.3 |
+| Add support for composable stereotypes                 |         |       |  6:06 |   7.6 |
 | Code generate all contexts                             |         |       |  0:38 |   0.8 |
 | Consider renaming orchestration to "engine"            |         |       |  0:38 |   0.8 |
+| Code generate feature infrastructure                   |         |       |  1:37 |   2.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -280,25 +281,25 @@ Notes:
 
 *** COMPLETED Trim down stitch's use of annotations                   :story:
     CLOSED: [2019-04-28 Sun 16:54]
-    :LOGBOOK:
-    CLOCK: [2019-04-28 Sun 16:38]--[2019-04-28 Sun 16:53] =>  0:15
-    CLOCK: [2019-04-28 Sun 15:42]--[2019-04-28 Sun 16:14] =>  0:32
-    CLOCK: [2019-04-28 Sun 15:19]--[2019-04-28 Sun 15:41] =>  0:22
-    CLOCK: [2019-04-28 Sun 14:57]--[2019-04-28 Sun 15:18] =>  0:21
-    :END:
+     :LOGBOOK:
+     CLOCK: [2019-04-28 Sun 16:38]--[2019-04-28 Sun 16:53] =>  0:15
+     CLOCK: [2019-04-28 Sun 15:42]--[2019-04-28 Sun 16:14] =>  0:32
+     CLOCK: [2019-04-28 Sun 15:19]--[2019-04-28 Sun 15:41] =>  0:22
+     CLOCK: [2019-04-28 Sun 14:57]--[2019-04-28 Sun 15:18] =>  0:21
+     :END:
 
-- remove weaving: configuration, weaver, command line options, cmake
-  targets.
-- remove profile field from stitch templates. Should not break
-  anything.
-- remove annotations expander from workflow. Actually we can't do this
-  yet because we are still relying on the profile for the stream name
-  variable. Actually we need to hack out profiles because otherwise we
-  would have to somehow support profile bindings inside of
-  stitch. This is really far too complicated to even contemplate. We
-  need to manually set the stream variable on every template and then
-  remove the profile.
-- add variability parameters to workflow, supply them from formatters.
+ - remove weaving: configuration, weaver, command line options, cmake
+   targets.
+ - remove profile field from stitch templates. Should not break
+   anything.
+ - remove annotations expander from workflow. Actually we can't do this
+   yet because we are still relying on the profile for the stream name
+   variable. Actually we need to hack out profiles because otherwise we
+   would have to somehow support profile bindings inside of
+   stitch. This is really far too complicated to even contemplate. We
+   need to manually set the stream variable on every template and then
+   remove the profile.
+ - add variability parameters to workflow, supply them from formatters.
 
 *** COMPLETED Read meta-data using configurations                     :story:
     CLOSED: [2019-04-28 Sun 17:20]
@@ -859,6 +860,21 @@ need it and code generate the contexts.
 Orchestration is a bit of a vague name; after all we do orchestration
 pretty much everywhere. This model really represents the code
 generation engine of dogen. Its still very vague but slightly less so.
+
+*** STARTED Code generate feature infrastructure                      :story:
+    :LOGBOOK:
+    CLOCK: [2019-05-03 Fri 16:53]--[2019-05-03 Fri 16:59] =>  0:06
+    CLOCK: [2019-05-03 Fri 15:21]--[2019-05-03 Fri 16:52] =>  1:31
+    :END:
+
+Dogen should generate code for the following:
+
+- definition of a feature template, as per the existing data
+  files. The approach should be very similar to what we did with
+  profiles. With this we have features as a meta-model element.
+- a concrete class to represent the feature group.
+- code to read the concrete class out of the dynamic configuration
+  (e.g. a "feature deserialiser" if you like).
 
 *** Merging of profiles and configurations is non-intuitive           :story:
 
