--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,31 +13,31 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-03 Fri 16:59]
+#+CAPTION: Clock summary at [2019-05-03 Fri 17:58]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *80:10* |       |       | 100.0 |
+| *Total time*                                           | *81:08* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 80:10   |       |       | 100.0 |
-| Active                                                 |         | 80:10 |       | 100.0 |
+| Stories                                                | 81:08   |       |       | 100.0 |
+| Active                                                 |         | 81:08 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   3.3 |
 | Sprint and product backlog grooming                    |         |       |  3:27 |   4.3 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   2.4 |
 | Read variability papers                                |         |       |  1:04 |   1.3 |
 | Emacs maintenance and exploration work                 |         |       |  0:20 |   0.4 |
 | Fix issues with nightly build and CI                   |         |       |  0:39 |   0.8 |
-| Finish implementing the variability model              |         |       | 10:49 |  13.5 |
-| Trim down stitch's use of annotations                  |         |       |  1:30 |   1.9 |
-| Read meta-data using configurations                    |         |       | 24:24 |  30.4 |
-| Remove uses of annotations                             |         |       |  7:44 |   9.6 |
+| Finish implementing the variability model              |         |       | 10:49 |  13.3 |
+| Trim down stitch's use of annotations                  |         |       |  1:30 |   1.8 |
+| Read meta-data using configurations                    |         |       | 24:24 |  30.1 |
+| Remove uses of annotations                             |         |       |  7:44 |   9.5 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
 | Exclude profiles from stereotypes processing           |         |       |  2:41 |   3.3 |
-| Profiles as meta-model elements                        |         |       | 13:54 |  17.3 |
-| Add support for composable stereotypes                 |         |       |  6:06 |   7.6 |
+| Profiles as meta-model elements                        |         |       | 13:54 |  17.1 |
+| Add support for composable stereotypes                 |         |       |  6:06 |   7.5 |
 | Code generate all contexts                             |         |       |  0:38 |   0.8 |
 | Consider renaming orchestration to "engine"            |         |       |  0:38 |   0.8 |
-| Code generate feature infrastructure                   |         |       |  1:37 |   2.0 |
+| Code generate feature infrastructure                   |         |       |  2:35 |   3.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -863,6 +863,7 @@ generation engine of dogen. Its still very vague but slightly less so.
 
 *** STARTED Code generate feature infrastructure                      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-03 Fri 17:00]--[2019-05-03 Fri 17:58] =>  0:58
     CLOCK: [2019-05-03 Fri 16:53]--[2019-05-03 Fri 16:59] =>  0:06
     CLOCK: [2019-05-03 Fri 15:21]--[2019-05-03 Fri 16:52] =>  1:31
     :END:
@@ -875,6 +876,15 @@ Dogen should generate code for the following:
 - a concrete class to represent the feature group.
 - code to read the concrete class out of the dynamic configuration
   (e.g. a "feature deserialiser" if you like).
+
+Problems:
+
+- we are defining a new binding point rather than binding; this means
+  that the logic for checking the bindings no longer works. For
+  example, we could be creating a new global binding point in a
+  property.
+
+: #DOGEN masd.variability.binding_point=global
 
 *** Merging of profiles and configurations is non-intuitive           :story:
 
