--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,23 +13,23 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-03 Fri 17:58]
+#+CAPTION: Clock summary at [2019-05-04 Sat 09:32]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *81:08* |       |       | 100.0 |
+| *Total time*                                           | *81:19* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 81:08   |       |       | 100.0 |
-| Active                                                 |         | 81:08 |       | 100.0 |
+| Stories                                                | 81:19   |       |       | 100.0 |
+| Active                                                 |         | 81:19 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   3.3 |
-| Sprint and product backlog grooming                    |         |       |  3:27 |   4.3 |
+| Sprint and product backlog grooming                    |         |       |  3:38 |   4.5 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   2.4 |
 | Read variability papers                                |         |       |  1:04 |   1.3 |
 | Emacs maintenance and exploration work                 |         |       |  0:20 |   0.4 |
 | Fix issues with nightly build and CI                   |         |       |  0:39 |   0.8 |
 | Finish implementing the variability model              |         |       | 10:49 |  13.3 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   1.8 |
-| Read meta-data using configurations                    |         |       | 24:24 |  30.1 |
+| Read meta-data using configurations                    |         |       | 24:24 |  30.0 |
 | Remove uses of annotations                             |         |       |  7:44 |   9.5 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
 | Exclude profiles from stereotypes processing           |         |       |  2:41 |   3.3 |
@@ -135,6 +135,7 @@ Happy Modeling!
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-05-04 Sat 09:21]--[2019-05-04 Sat 09:32] =>  0:11
     CLOCK: [2019-05-03 Fri 11:28]--[2019-05-03 Fri 11:33] =>  0:05
     CLOCK: [2019-05-02 Thu 13:59]--[2019-05-02 Thu 14:12] =>  0:18
     CLOCK: [2019-05-02 Thu 12:54]--[2019-05-02 Thu 13:04] =>  0:10
@@ -885,6 +886,20 @@ Problems:
   property.
 
 : #DOGEN masd.variability.binding_point=global
+
+*** Linux and OSX binaries are not stripped                           :story:
+
+At present our Linux and OSX build is much bigger than our windows
+builds (3.8 MB on Windows vs 31 MB OSX and 15 MB on Linux). The
+problem appears to be that we are not stripping the binaries on Linux.
+
+We tried manually stripping:
+
+:     # strip the binaries in release
+:    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
+:    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
+
+However clang does not support this.
 
 *** Merging of profiles and configurations is non-intuitive           :story:
 
