--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,15 +10,16 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-05 Sun 22:49]
+#+CAPTION: Clock summary at [2019-05-06 Mon 09:09]
 | <75>                                   |        |      |      |       |
 | Headline                               | Time   |      |      |     % |
 |----------------------------------------+--------+------+------+-------|
-| *Total time*                           | *0:35* |      |      | 100.0 |
+| *Total time*                           | *0:54* |      |      | 100.0 |
 |----------------------------------------+--------+------+------+-------|
-| Stories                                | 0:35   |      |      | 100.0 |
-| Active                                 |        | 0:35 |      | 100.0 |
-| Edit release notes for previous sprint |        |      | 0:35 | 100.0 |
+| Stories                                | 0:54   |      |      | 100.0 |
+| Active                                 |        | 0:54 |      | 100.0 |
+| Edit release notes for previous sprint |        |      | 0:35 |  64.8 |
+| Sprint and product backlog grooming    |        |      | 0:19 |  35.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -110,7 +111,10 @@ Happy Modeling!
 - [[https://www.linkedin.com/feed/update/urn:li:activity:6526115847252041728][LinkedIn]]
 - [[https://gitter.im/MASD-Project/Lobby][Gitter]]
 
-*** Sprint and product backlog grooming                               :story:
+*** STARTED Sprint and product backlog grooming                       :story:
+    :LOGBOOK:
+    CLOCK: [2019-05-06 Mon 08:50]--[2019-05-06 Mon 09:09] =>  0:19
+    :END:
 
 Updates to sprint and product backlog.
 
