--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,21 +10,24 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-06 Mon 12:15]
+#+CAPTION: Clock summary at [2019-05-06 Mon 17:48]
 | <75>                                   |        |      |      |       |
 | Headline                               | Time   |      |      |     % |
 |----------------------------------------+--------+------+------+-------|
-| *Total time*                           | *2:35* |      |      | 100.0 |
+| *Total time*                           | *4:49* |      |      | 100.0 |
 |----------------------------------------+--------+------+------+-------|
-| Stories                                | 2:35   |      |      | 100.0 |
-| Active                                 |        | 2:35 |      | 100.0 |
-| Edit release notes for previous sprint |        |      | 2:16 |  87.7 |
-| Sprint and product backlog grooming    |        |      | 0:19 |  12.3 |
+| Stories                                | 4:49   |      |      | 100.0 |
+| Active                                 |        | 4:49 |      | 100.0 |
+| Edit release notes for previous sprint |        |      | 4:30 |  93.4 |
+| Sprint and product backlog grooming    |        |      | 0:19 |   6.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Edit release notes for previous sprint                    :story:
     :LOGBOOK:
+    CLOCK: [2019-05-06 Mon 15:48]--[2019-05-06 Mon 17:48] =>  2:00
+    CLOCK: [2019-05-06 Mon 12:24]--[2019-05-06 Mon 12:31] =>  0:07
+    CLOCK: [2019-05-06 Mon 12:16]--[2019-05-06 Mon 12:23] =>  0:07
     CLOCK: [2019-05-06 Mon 10:34]--[2019-05-06 Mon 12:15] =>  1:41
     CLOCK: [2019-05-05 Sun 22:10]--[2019-05-05 Sun 22:45] =>  0:35
     :END:
