--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,22 +10,23 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-06 Mon 17:48]
-| <75>                                   |        |      |      |       |
-| Headline                               | Time   |      |      |     % |
-|----------------------------------------+--------+------+------+-------|
-| *Total time*                           | *4:49* |      |      | 100.0 |
-|----------------------------------------+--------+------+------+-------|
-| Stories                                | 4:49   |      |      | 100.0 |
-| Active                                 |        | 4:49 |      | 100.0 |
-| Edit release notes for previous sprint |        |      | 4:30 |  93.4 |
-| Sprint and product backlog grooming    |        |      | 0:19 |   6.6 |
+#+CAPTION: Clock summary at [2019-05-06 Mon 17:51]
+| <75>                                                   |        |      |      |       |
+| Headline                                               | Time   |      |      |     % |
+|--------------------------------------------------------+--------+------+------+-------|
+| *Total time*                                           | *4:49* |      |      | 100.0 |
+|--------------------------------------------------------+--------+------+------+-------|
+| Stories                                                | 4:49   |      |      | 100.0 |
+| Active                                                 |        | 4:49 |      | 100.0 |
+| Edit release notes for previous sprint                 |        |      | 2:30 |  51.9 |
+| Create a video demo for the previous sprint's features |        |      | 2:00 |  41.5 |
+| Sprint and product backlog grooming                    |        |      | 0:19 |   6.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
-*** STARTED Edit release notes for previous sprint                    :story:
+*** COMPLETED Edit release notes for previous sprint                  :story:
+    CLOSED: [2019-05-06 Mon 17:51]
     :LOGBOOK:
-    CLOCK: [2019-05-06 Mon 15:48]--[2019-05-06 Mon 17:48] =>  2:00
     CLOCK: [2019-05-06 Mon 12:24]--[2019-05-06 Mon 12:31] =>  0:07
     CLOCK: [2019-05-06 Mon 12:16]--[2019-05-06 Mon 12:23] =>  0:07
     CLOCK: [2019-05-06 Mon 10:34]--[2019-05-06 Mon 12:15] =>  1:41
@@ -115,6 +116,14 @@ Happy Modeling!
 - [[https://www.linkedin.com/feed/update/urn:li:activity:6526115847252041728][LinkedIn]]
 - [[https://gitter.im/MASD-Project/Lobby][Gitter]]
 
+*** COMPLETED Create a video demo for the previous sprint's features  :story:
+    CLOSED: [2019-05-06 Mon 17:51]
+    :LOGBOOK:
+    CLOCK: [2019-05-06 Mon 15:48]--[2019-05-06 Mon 17:48] =>  2:00
+    :END:
+
+Time spent creating the demo.
+
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
     CLOCK: [2019-05-06 Mon 08:50]--[2019-05-06 Mon 09:09] =>  0:19
@@ -122,9 +131,13 @@ Happy Modeling!
 
 Updates to sprint and product backlog.
 
-***  Create a video demo for the previous sprint's features           :story:
+*** Defining profiles directly on a target model does not work        :story:
 
-Time spent creating the demo.
+We seem to have made some mistake when processing profile templates:
+when we define them directly on a target model we fail with an
+error. The problem is probably to do with the fact that we do not set
+the meta-model information on these new types. We should try something
+similar for all meta-types such as decorations, etc.
 
 ***  Read variability papers                                          :story:
 
