--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,18 +10,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-07 Tue 09:55]
+#+CAPTION: Clock summary at [2019-05-07 Tue 11:57]
 | <75>                                                       |        |      |      |       |
 | Headline                                                   | Time   |      |      |     % |
 |------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                               | *5:41* |      |      | 100.0 |
+| *Total time*                                               | *7:42* |      |      | 100.0 |
 |------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                    | 5:41   |      |      | 100.0 |
-| Active                                                     |        | 5:41 |      | 100.0 |
-| Edit release notes for previous sprint                     |        |      | 2:41 |  47.2 |
-| Create a video demo for the previous sprint's features     |        |      | 2:11 |  38.4 |
-| Sprint and product backlog grooming                        |        |      | 0:19 |   5.6 |
-| Defining profiles directly on a target model does not work |        |      | 0:30 |   8.8 |
+| Stories                                                    | 7:42   |      |      | 100.0 |
+| Active                                                     |        | 7:42 |      | 100.0 |
+| Edit release notes for previous sprint                     |        |      | 2:41 |  34.8 |
+| Create a video demo for the previous sprint's features     |        |      | 2:11 |  28.4 |
+| Sprint and product backlog grooming                        |        |      | 0:19 |   4.1 |
+| Defining profiles directly on a target model does not work |        |      | 0:30 |   6.5 |
+| Create namespaces for model elements                       |        |      | 2:01 |  26.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -177,7 +178,10 @@ error. The problem is probably to do with the fact that we do not set
 the meta-model information on these new types. We should try something
 similar for all meta-types such as decorations, etc.
 
-*** Create namespaces for model elements                              :story:
+*** STARTED Create namespaces for model elements                      :story:
+    :LOGBOOK:
+    CLOCK: [2019-05-07 Tue 09:56]--[2019-05-07 Tue 11:57] =>  2:01
+    :END:
 
 At present we have a flat namespace for all elements in coding. This
 had served us well up to recently, but with the proliferation of
