--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,20 +10,20 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-07 Tue 14:15]
+#+CAPTION: Clock summary at [2019-05-07 Tue 14:44]
 | <75>                                                       |        |      |      |       |
 | Headline                                                   | Time   |      |      |     % |
 |------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                               | *8:16* |      |      | 100.0 |
+| *Total time*                                               | *8:44* |      |      | 100.0 |
 |------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                    | 8:16   |      |      | 100.0 |
-| Active                                                     |        | 8:16 |      | 100.0 |
-| Edit release notes for previous sprint                     |        |      | 2:41 |  32.5 |
-| Create a video demo for the previous sprint's features     |        |      | 2:11 |  26.4 |
-| Sprint and product backlog grooming                        |        |      | 0:19 |   3.8 |
-| Defining profiles directly on a target model does not work |        |      | 0:30 |   6.0 |
-| Inner modules need to be qualified                         |        |      | 0:22 |   4.4 |
-| Create namespaces for model elements                       |        |      | 2:13 |  26.8 |
+| Stories                                                    | 8:44   |      |      | 100.0 |
+| Active                                                     |        | 8:44 |      | 100.0 |
+| Edit release notes for previous sprint                     |        |      | 2:41 |  30.7 |
+| Create a video demo for the previous sprint's features     |        |      | 2:11 |  25.0 |
+| Sprint and product backlog grooming                        |        |      | 0:19 |   3.6 |
+| Defining profiles directly on a target model does not work |        |      | 0:30 |   5.7 |
+| Inner modules need to be qualified                         |        |      | 0:22 |   4.2 |
+| Create namespaces for model elements                       |        |      | 2:41 |  30.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -193,6 +193,7 @@ resolver cannot find M::R unless we specify N::M::R.
 
 *** STARTED Create namespaces for model elements                      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-07 Tue 14:16]--[2019-05-07 Tue 14:44] =>  0:28
     CLOCK: [2019-05-07 Tue 13:41]--[2019-05-07 Tue 13:53] =>  0:12
     CLOCK: [2019-05-07 Tue 09:56]--[2019-05-07 Tue 11:57] =>  2:01
     :END:
