--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,20 +10,21 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-07 Tue 15:52]
-| <75>                                                       |        |      |      |       |
-| Headline                                                   | Time   |      |      |     % |
-|------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                               | *9:50* |      |      | 100.0 |
-|------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                    | 9:50   |      |      | 100.0 |
-| Active                                                     |        | 9:50 |      | 100.0 |
-| Edit release notes for previous sprint                     |        |      | 2:41 |  27.3 |
-| Create a video demo for the previous sprint's features     |        |      | 2:11 |  22.2 |
-| Sprint and product backlog grooming                        |        |      | 0:19 |   3.2 |
-| Defining profiles directly on a target model does not work |        |      | 0:30 |   5.1 |
-| Inner modules need to be qualified                         |        |      | 0:22 |   3.7 |
-| Create namespaces for model elements                       |        |      | 3:47 |  38.5 |
+#+CAPTION: Clock summary at [2019-05-07 Tue 16:25]
+| <75>                                                       |         |       |      |       |
+| Headline                                                   | Time    |       |      |     % |
+|------------------------------------------------------------+---------+-------+------+-------|
+| *Total time*                                               | *10:21* |       |      | 100.0 |
+|------------------------------------------------------------+---------+-------+------+-------|
+| Stories                                                    | 10:21   |       |      | 100.0 |
+| Active                                                     |         | 10:21 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |  25.9 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |  21.1 |
+| Sprint and product backlog grooming                        |         |       | 0:19 |   3.1 |
+| Defining profiles directly on a target model does not work |         |       | 0:30 |   4.8 |
+| Inner modules need to be qualified                         |         |       | 0:22 |   3.5 |
+| Create namespaces for model elements                       |         |       | 4:11 |  40.4 |
+| Code generate feature infrastructure                       |         |       | 0:07 |   1.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -191,8 +192,10 @@ R. In T we should be able to refer to M::R without any further
 qualification because N contains both T and M. However, at present the
 resolver cannot find M::R unless we specify N::M::R.
 
-*** STARTED Create namespaces for model elements                      :story:
+*** COMPLETED Create namespaces for model elements                    :story:
+    CLOSED: [2019-05-07 Tue 16:17]
     :LOGBOOK:
+    CLOCK: [2019-05-07 Tue 15:53]--[2019-05-07 Tue 16:17] =>  0:24
     CLOCK: [2019-05-07 Tue 15:38]--[2019-05-07 Tue 15:52] =>  0:14
     CLOCK: [2019-05-07 Tue 14:45]--[2019-05-07 Tue 15:37] =>  0:52
     CLOCK: [2019-05-07 Tue 14:16]--[2019-05-07 Tue 14:44] =>  0:28
@@ -225,7 +228,10 @@ Any time spent improving emacs, exploring new modes, fixing snags, etc.
 
 Time spent fixing build issues with either nightlies and/or CI.
 
-*** Code generate feature infrastructure                              :story:
+*** STARTED Code generate feature infrastructure                      :story:
+    :LOGBOOK:
+    CLOCK: [2019-05-07 Tue 16:18]--[2019-05-07 Tue 16:25] =>  0:07
+    :END:
 
 Dogen should generate code for the following:
 
