--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,21 +10,21 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-07 Tue 16:25]
+#+CAPTION: Clock summary at [2019-05-07 Tue 16:54]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *10:21* |       |      | 100.0 |
+| *Total time*                                               | *10:48* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 10:21   |       |      | 100.0 |
-| Active                                                     |         | 10:21 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |  25.9 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |  21.1 |
-| Sprint and product backlog grooming                        |         |       | 0:19 |   3.1 |
-| Defining profiles directly on a target model does not work |         |       | 0:30 |   4.8 |
-| Inner modules need to be qualified                         |         |       | 0:22 |   3.5 |
-| Create namespaces for model elements                       |         |       | 4:11 |  40.4 |
-| Code generate feature infrastructure                       |         |       | 0:07 |   1.1 |
+| Stories                                                    | 10:48   |       |      | 100.0 |
+| Active                                                     |         | 10:48 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |  24.8 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |  20.2 |
+| Sprint and product backlog grooming                        |         |       | 0:19 |   2.9 |
+| Defining profiles directly on a target model does not work |         |       | 0:30 |   4.6 |
+| Inner modules need to be qualified                         |         |       | 0:22 |   3.4 |
+| Create namespaces for model elements                       |         |       | 4:11 |  38.7 |
+| Code generate feature infrastructure                       |         |       | 0:34 |   5.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -230,6 +230,7 @@ Time spent fixing build issues with either nightlies and/or CI.
 
 *** STARTED Code generate feature infrastructure                      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-07 Tue 16:26]--[2019-05-07 Tue 16:53] =>  0:27
     CLOCK: [2019-05-07 Tue 16:18]--[2019-05-07 Tue 16:25] =>  0:07
     :END:
 
