agile: backlog grooming

--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,21 +10,21 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-07 Tue 18:01]
+#+CAPTION: Clock summary at [2019-05-08 Wed 10:29]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *11:55* |       |      | 100.0 |
+| *Total time*                                               | *12:56* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 11:55   |       |      | 100.0 |
-| Active                                                     |         | 11:55 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |  22.5 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |  18.3 |
-| Sprint and product backlog grooming                        |         |       | 0:19 |   2.7 |
-| Defining profiles directly on a target model does not work |         |       | 0:30 |   4.2 |
-| Inner modules need to be qualified                         |         |       | 0:22 |   3.1 |
-| Create namespaces for model elements                       |         |       | 4:11 |  35.1 |
-| Code generate feature infrastructure                       |         |       | 1:41 |  14.1 |
+| Stories                                                    | 12:56   |       |      | 100.0 |
+| Active                                                     |         | 12:56 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |  20.7 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |  16.9 |
+| Sprint and product backlog grooming                        |         |       | 0:19 |   2.4 |
+| Defining profiles directly on a target model does not work |         |       | 0:30 |   3.9 |
+| Inner modules need to be qualified                         |         |       | 0:22 |   2.8 |
+| Create namespaces for model elements                       |         |       | 5:08 |  39.7 |
+| Code generate feature infrastructure                       |         |       | 1:45 |  13.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -195,6 +195,7 @@ resolver cannot find M::R unless we specify N::M::R.
 *** COMPLETED Create namespaces for model elements                    :story:
     CLOSED: [2019-05-07 Tue 16:17]
     :LOGBOOK:
+    CLOCK: [2019-05-08 Wed 09:31]--[2019-05-08 Wed 10:28] =>  0:57
     CLOCK: [2019-05-07 Tue 15:53]--[2019-05-07 Tue 16:17] =>  0:24
     CLOCK: [2019-05-07 Tue 15:38]--[2019-05-07 Tue 15:52] =>  0:14
     CLOCK: [2019-05-07 Tue 14:45]--[2019-05-07 Tue 15:37] =>  0:52
@@ -216,6 +217,16 @@ elements into their own namespaces, such as:
 - build
 - etc.
 
+Actually we now have only the "core" elements outside a namespace. In
+reality, these are "structural" elements. Create a namespace for them
+as well.
+
+*** Leaves in internal modules are not captured                       :story:
+
+It seems we are not adding leaves to parents if they are located in
+internal modules. It could also be because the generalisation
+relationship comes about via meta-data rather than UML generalisation.
+
 *** Read variability papers                                           :story:
 
 Time spent reading the literature on variability.
@@ -230,6 +241,7 @@ Time spent fixing build issues with either nightlies and/or CI.
 
 *** STARTED Code generate feature infrastructure                      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-08 Wed 09:27]--[2019-05-08 Wed 09:31] =>  0:04
     CLOCK: [2019-05-07 Tue 16:54]--[2019-05-07 Tue 18:01] =>  1:07
     CLOCK: [2019-05-07 Tue 16:26]--[2019-05-07 Tue 16:53] =>  0:27
     CLOCK: [2019-05-07 Tue 16:18]--[2019-05-07 Tue 16:25] =>  0:07
@@ -252,6 +264,14 @@ Problems:
   property.
 
 : #DOGEN masd.variability.binding_point=global
+
+*** Move parent processing to injection                               :story:
+
+At present we are reading the parent field from meta-data in coding's
+parsing transform. If we create a transform for this in injection,
+this would mean that all meta-model elements would have access to
+parenting via meta-data. We could also name the transform a bit
+better.
 
 *** Linux and OSX binaries are not stripped                           :story:
 
